# wordle-solver

./: Cargo.toml  README.md
src/: main.rs
src/solving/: calc_info.rs  mod.rs  solver.rs
